--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,59 @@
-@import './base.css';
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
+.background {
+  z-index: -99;
+  position:fixed;
+  padding-top: 2%;
+  top: 0;
+  left: 0;
+  background-image: url(./43b0cee0c1a6ec82e4de348988ccb82d7198052.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.window {
+  display: flex;
+  margin: auto;
+  width: 30%;
+  min-width: 30%;
+  min-height: 30%;
   padding: 2rem;
-  font-weight: normal;
+  border-radius: 1rem;
+  background: rgba(147, 228, 240, 0.6);
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
+  box-shadow: 0 .1rem .2rem .2rem rgba(0, 0, 0, 0.2);
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+.fadeInDown {
+  animation: fadeInDown 1s;
+  -webkit-animation: fadeInDown 1s;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+@keyframes fadeInDown {
+  0% {
+      margin-top: -100rem;
+      opacity: 0;
+  }
+  100% {
+      margin-top: 0;
+      opacity: 1;
   }
 }
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+@-webkit-keyframes fadeInDown{
+  0% {
+      margin-top: -100rem;
+      opacity: 0;
   }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  100% {
+      margin-top: 0;
+      opacity: 1;
   }
 }
