--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,7 +27,7 @@ body {
   width: 30rem;
   height: 0rem;
   min-width: 30rem;
-  min-height: 30rem;
+  min-height: 20rem;
   padding: 2rem;
   border-radius: 1rem;
   background: rgba(147, 228, 240, 0.6);
@@ -35,12 +35,16 @@ body {
 	backdrop-filter: blur(10px);
   box-shadow: 0 .1rem .2rem .2rem rgba(0, 0, 0, 0.2);
   user-select: none;
-  padding-bottom: 3rem;
-  transition: height 0.5s ease-in-out;
+  padding-bottom: 4rem;
+  transition: height 0.8s ease-in-out;
 }
 
 .window__register {
-  height: 40rem;
+  height: 29.5rem;
+}
+
+.window__login {
+  height: 25rem;
 }
 
 .genshin {
@@ -82,13 +86,18 @@ body {
   font-weight: 400;
   padding: 1rem;
   width: 20rem;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, color 0.3s ease, opacity 0.3s ease;
   cursor: pointer;
   vertical-align: middle;
   margin-top: 2rem;
   margin-left: 1rem; 
   box-shadow: 0 .2rem .2rem 0 rgba(0,0,0,.24),
     0 .2rem .2rem 0 rgba(0,0,0,.19);
+}
+.niceButton:disabled {
+  opacity: 0.7;
+  filter: grayscale(50%);
+  cursor: auto;
 }
 .niceButton span {
   cursor: pointer;
@@ -111,10 +120,16 @@ body {
   opacity: 1;
   right: 0;
 }
+.niceButton:disabled span::after {
+  content: "";
+}
+.niceButton:disabled:hover span {
+  padding-right: 0rem;
+}
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 1.5s ease;
+  transition: opacity 2s ease;
 }
 
 .fade-enter-from,
